--- a/doctors/templates/doctors/pages/appointment_list.html
+++ b/doctors/templates/doctors/pages/appointment_list.html
@@ -1,7 +1,7 @@
 {% extends 'doctors/doctors_base_layout/layout.html' %}
 {% block style %}
 
-    {% endblock %}
+{% endblock %}
 {% block content %}
 <div class="container">
     <div class="row">
@@ -26,21 +26,16 @@
                       {% for appointment in appointment_list %}
                       <tr>
                         {% if appointment.status != 3 %}
-                            {% if appointment.status != 1 %}
+                            {% if appointment.status == null  %}
                               <td><a href="#">{{appointment.customer}}</a></td>
                               <td class="font-weight-600"><p onclick = 'show("{{appointment.description}}")' class="d-inline-block text-truncate" style="max-width: 100px;">{{appointment.description}}</p></td>
-                              <td>{% if appointment.status == 1 %}
-                                    <div class="badge badge-success">Approved</div>
-                                  {% elif appointment.status == 2 %}
-                                    <div class="badge badge-warning" data-toggle="tooltip" data-placement="top" title="ReSchedule" data-original-title="ReSchedule">ReSchedule</div>
-                                  {% else %}
-                                    <div class="badge badge-warning">Unmark</div>
-                                  {% endif %}
+                              <td>
+                                  <div class="badge badge-danger">Unmark</div>
                               </td>  
                               <td>{{appointment.schedule}}</td>
                               <td>
                                 <button class="btn btn-success btn-sm" value="{{appointment.id}}" onclick="approve(this, '{{appointment.customer.email}}')" data-toggle="tooltip" data-placement="top" title="Approve" data-original-title="Approve"><i class="fas fa-check"></i></button>
-                                <button class="btn btn-warning btn-sm" value="{{appointment.id}}" data-toggle="tooltip" data-placement="top" title="ReSchedule" data-original-title="ReSchedule"><i class='fas fa-calendar-alt'></i></button>
+                                <button class="btn btn-warning btn-sm" value="{{appointment.id}}" onclick = "reschedule(this, '{{appointment.customer.email}}')" data-toggle="tooltip" data-placement="top" title="ReSchedule" data-original-title="ReSchedule"><i class='fas fa-calendar-alt'></i></button>
                                 <button class="btn btn-danger btn-sm" value="{{appointment.id}}" onclick = "decline(this, '{{appointment.customer.email}}')" data-toggle="tooltip" data-placement="top" title="Decline" data-original-title="Decline"><i class="fa fa-times" aria-hidden="true"></i></button>
                                 
                               </td>
@@ -51,13 +46,11 @@
                                       <div class="badge badge-success">Approved</div>
                                     {% elif appointment.status == 2 %}
                                       <div class="badge badge-warning" data-toggle="tooltip" data-placement="top" title="ReSchedule" data-original-title="ReSchedule">ReSchedule</div>
-                                    {% else %}
-                                      <div class="badge badge-warning">Unmark</div>
                                     {% endif %}
                                 </td>  
                                 <td>{{appointment.schedule}}</td>
                                 <td>
-                                  <button class="btn btn-warning btn-sm" value="{{appointment.id}}" data-toggle="tooltip" data-placement="top" title="ReSchedule" data-original-title="ReSchedule"><i class='fas fa-calendar-alt'></i></button>
+                                  <button class="btn btn-warning btn-sm" value="{{appointment.id}}" data-toggle="tooltip" onclick = "reschedule(this, '{{appointment.customer.email}}')" data-placement="top" title="ReSchedule" data-original-title="ReSchedule"><i class='fas fa-calendar-alt'></i></button>
                                   <button class="btn btn-danger btn-sm" value="{{appointment.id}}" data-toggle="tooltip" onclick = "decline(this, '{{appointment.customer.email}}')" data-placement="top" title="Decline" data-original-title="Decline"><i class="fa fa-times" aria-hidden="true"></i></button>
                                   
                                 </td>
@@ -94,7 +87,7 @@
   </div>
 </div>
 <!-- end modal -->
-<!-- send email modal -->
+<!-- send email modal for appointment declined -->
 <div class="modal fade" id="sent_email_modal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -135,12 +128,92 @@
   </div>
 </div>
 <!-- end modal -->
+<!-- send email modal for appointment reschedule -->
+<div class="modal fade" id="sent_email_modal_reschedule" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Appointment Re-Schedule</h5>
+        <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close">X</button>
+      </div>
+      <form onsubmit="return false">
+          <div class="modal-body">
+              <div class="mb-3">
+                  <div id = "reschedule_loader">
 
+                  </div>
+                  <label for="recipient" class="col-form-label">From:</label>
+                  <input type="text" class="form-control" value = "beastfriendveterinaryclinic@gmail.com" id="recipient" readonly>
+              </div>
+              <div class="mb-3">
+                  <label for="recipient" class="col-form-label">To:</label>
+                  <input type="text" id = "customer_email_reshedule" class="form-control" value = "" id="recipient" readonly>
+              </div>
+              <div class="mb-3" id = "error">
+                  
+              </div>
+              <div class="mb-3">
+                  <label for="subject" class="col-form-label">Subject:</label>
+                  <input type="text" class="form-control" maxlength="25" value = "" id="subject_reshedule" required>
+              </div>
+              <div class="mb-3">
+              <label for="message" class="col-form-label">Reason:</label>
+              <textarea class="form-control" id="reason_reshedule" required></textarea>
+              </div>
+              <div class="mb-3">
+                <label>Re-Schedule</label>
+                <div class="row">
+                  <div class="col">
+                    <input class="form-control" type="date" id="date" name = "date" required />
+                  </div>
+                  <div class="col">
+                    <select class = "form-control" name="time" id="time" required>
+                        <option class = "form-control" value="">hh:mm</option>
+                        <option class = "form-control" value="08:30">08:30</option>
+                        <option class = "form-control" value="09:00">09:00</option>
+                        <option class = "form-control" value="09:30">09:30</option>
+                        <option class = "form-control" value="10:00">10:00</option>
+                        <option class = "form-control" value="10:30">10:30</option>
+                        <option class = "form-control" value="11:00">11:00</option>
+                        <option class = "form-control" value="11:30">11:30</option>
+                        <option class = "form-control" value="13:30">13:30</option>
+                        <option class = "form-control" value="14:00">14:00</option>
+                        <option class = "form-control" value="14:30">14:30</option>
+                        <option class = "form-control" value="15:00">15:00</option>
+                        <option class = "form-control" value="15:30">15:30</option>
+                        
+                    </select>
+                  </div>
+                </div>
+          </div>
+          <div class="modal-footer">
+          <button onclick = "send_reschedule()" type="submit" class="btn btn-primary">Send email</button>
+          </div>
+      </form>
+    </div>
+  </div>
+</div>
+<!-- end modal -->
     <script src="https://code.jquery.com/jquery-2.2.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.3/themes/smoothness/jquery-ui.css">
     <script>
-        function show(data){
+      $(function(){
+        var dtToday = new Date();
+        
+        var month = dtToday.getMonth() + 1;
+        var day = dtToday.getDate();
+        var year = dtToday.getFullYear();
+        if(month < 10)
+            month = '0' + month.toString();
+        if(day < 10)
+            day = '0' + day.toString();
+        
+        var minDate= year + '-' + month + '-' + day;
+        
+        $('#date').attr('min', minDate);
+    });
+    function show(data){
         $('#data').html(data);
         $('#read_more').modal('show');
     }
@@ -177,7 +250,7 @@
       td2.innerHTML=otd2;
       td3.innerHTML='<div class="badge badge-success">Approved</div>';
       td4.innerHTML=otd4;
-      td5.innerHTML='<button class="btn btn-warning btn-sm" data-toggle="tooltip" data-placement="top" title="ReSchedule" data-original-title="ReSchedule"><i class="fas fa-calendar-alt"></i></button>&nbsp;<button class="btn btn-danger btn-sm" onclick = "decline(this,'+email+')" data-toggle="tooltip" data-placement="top" title="Decline" data-original-title="Decline"><i class="fa fa-times" aria-hidden="true"></i></button>';
+      td5.innerHTML='<button class="btn btn-warning value="'+id+'" btn-sm" data-toggle="tooltip" onclick = "reschedule(this,'+email+')" data-placement="top" title="ReSchedule" data-original-title="ReSchedule"><i class="fas fa-calendar-alt"></i></button>&nbsp;<button class="btn btn-danger btn-sm" value="'+id+'" onclick = "decline(this,'+email+')" data-toggle="tooltip" data-placement="top" title="Decline" data-original-title="Decline"><i class="fa fa-times" aria-hidden="true"></i></button>';
         $.ajax({
             type:"POST",
             url:"{% url 'doctors:approve_appointment_view' %}",
@@ -185,7 +258,7 @@
                 appointment_id:id
             },
             success:function(response){
-                $('#loader').html(`<div class = "alert alert-success">${response}</div>`)
+                $('#loader').html(`<div class = "alert alert-success">${response}</div>`);
                 document.querySelector('#tablebody').replaceChild(tr, row);
                 setTimeout(() => {
                   $('#loader').html("");
@@ -202,29 +275,102 @@
         $('#sent_email_modal').modal('show');
        
         $('#send').click(function(){
-          let subject = $.trim($('#subject').val());
-          let reason = $.trim($('#reason').val());
-          if(subject != "" && reason != ""){
-            $('#decline_loader').html('<div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 100%; border-radius:10px; " aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">Sending email...</div>')
-              $.ajax({
-                type:'POST',
-                url:"{% url 'doctors:decline_appointment_view' %}",
-                data:{
-                    email:email,
-                    subject:subject,
-                    reason:reason,
-                    appointment_id:id
-                },
-                success:function(response){
-                    $('#decline_loader').html('');
-                    $('#sent_email_modal').modal('hide');
-                    tr.parentNode.removeChild(tr);
-                }
-              })
-          }
-        })
+            let subject = $.trim($('#subject').val());
+            let reason = $.trim($('#reason').val());
+            if(subject != "" && reason != ""){
+              $('#decline_loader').html('<div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 100%; border-radius:10px; " aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">Sending email...</div>');
+                $.ajax({
+                  type:'POST',
+                  url:"{% url 'doctors:decline_appointment_view' %}",
+                  data:{
+                      email:email,
+                      subject:subject,
+                      reason:reason,
+                      appointment_id:id
+                  },
+                  success:function(response){
+                      $('#decline_loader').html('');
+                      $('#subject').val('');
+                      $('#reason').val('');
+                      $('#sent_email_modal').modal('hide');
+                      tr.parentNode.removeChild(tr);
+                  }
+                })
+            }
+          })
       })
     }
+    var row_reschedule;
+    var tr_reschedule;
+    var id_reschedule;
+    var email_reschedule;
+    function reschedule(button, temp_email){
+      let email = `'${temp_email}'`;
+      let id = button.value;
+          email_reschedule = email;
+          id_reschedule = id;
+          row_reschedule = button.parentNode.parentNode;
+          tr_reschedule = document.createElement('tr');
+          let otd1 = row_reschedule.cells[0].innerHTML;
+          let otd2 = row_reschedule.cells[1].innerHTML;
+
+          let otd4 = row_reschedule.cells[3].innerHTML;
+          let otd5 = row_reschedule.cells[4].innerHTML;
+
+          let td1 = tr_reschedule.appendChild(document.createElement('td'));
+          let td2 = tr_reschedule.appendChild(document.createElement('td'));
+          let td3 = tr_reschedule.appendChild(document.createElement('td'));
+          let td4 = tr_reschedule.appendChild(document.createElement('td'));
+          let td5 = tr_reschedule.appendChild(document.createElement('td'));
+
+          td1.innerHTML=otd1;
+          td2.innerHTML=otd2;
+          td3.innerHTML='<div class="badge badge-warning">Rescheduled</div>';
+          td4.innerHTML=otd4;
+          td5.innerHTML='<button class="btn btn-warning btn-sm" value="'+id+'" data-toggle="tooltip" onclick = "reschedule(this,'+email+')" data-placement="top" title="ReSchedule" data-original-title="ReSchedule"><i class="fas fa-calendar-alt"></i></button>&nbsp;<button class="btn btn-danger btn-sm" value="'+id+'" onclick = "decline(this,'+email+')" data-toggle="tooltip" data-placement="top" title="Decline" data-original-title="Decline"><i class="fa fa-times" aria-hidden="true"></i></button>';
+          
+
+        $('#customer_email_reshedule').val(temp_email);
+        $('#sent_email_modal_reschedule').modal('show');
+        
+        
+
+      }
+      function send_reschedule(){
+          let subject_subject = $.trim($('#subject_reshedule').val());
+          let reason_reshedule = $.trim($('#reason_reshedule').val());
+          let date = $.trim($('#date').val());
+          let time = $.trim($('#time').val());
+
+          if(subject_subject != '' && reason_reshedule != '' && date != '' && time != ''){
+            let formated_date = date.replaceAll("-", "/");
+            let schedule = `${formated_date} ${time}`;
+
+            $('#reschedule_loader').html('<div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 100%; border-radius:10px; " aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">Sending email...</div>');
+                $.ajax({
+                    type:"POST",
+                    url:"{% url 'doctors:reschedule_appointment_view' %}",
+                    data:{
+                        reschedule_appointment_id:id_reschedule,
+                        reschedule_appointment_email:email_reschedule,
+                        reschedule_appointment_subject:subject_subject,
+                        reschedule_appointment_reason:reason_reshedule,
+                        reschedule_appointment_date:schedule,
+
+                    },
+                    success:function(response){
+                        $('#reschedule_loader').html('');
+                        $('#sent_email_modal_reschedule').modal('hide');
+                        $('#loader').html(`<div class = "alert alert-success">${response}</div>`)
+                        document.querySelector('#tablebody').replaceChild(tr_reschedule, row_reschedule);
+                        setTimeout(() => {
+                          $('#loader').html("");
+                        }, 3000);
+                      }
+                })
+            }
+          
+          }
     </script>
 
 {% endblock %}
