--- a/doctors/templates/doctors/pages/appointment_list.html
+++ b/doctors/templates/doctors/pages/appointment_list.html
@@ -1,6 +1,71 @@
 {% extends 'doctors/doctors_base_layout/layout.html' %}
+{% load static %}
 {% block style %}
-
+  <style>
+      .calendar{
+        width: 430px;
+        height: 350px;
+        background-color: antiquewhite;
+        box-shadow: 5px 5px 5px 5px #888888;
+      }
+      .month{
+        width: 100%;
+        height: 70px;
+        background-color: aqua;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 3px 5px;
+        text-align: center;
+      }
+      .month i {
+        font-size: 14px;
+        cursor: pointer;
+      }
+      .date p:hover{
+        cursor: pointer;
+        text-decoration: underline;
+      }
+      .weekdays{
+        width: 100%;
+        height: 50px;
+        padding: 0 3px;
+        display: flex;
+        align-items: center;
+      }
+      .weekdays div{
+        width: calc(427px/7);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .days{
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        padding: 3px;
+      }
+      .days div{
+        margin: 3px;
+        width: calc(382px/7);
+        height: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 5px;
+      }
+      .days div:hover:not(.today){
+        cursor: pointer;
+        background-color: burlywood;
+      }
+      .prev-date, .next-date{
+        opacity: .5;
+      }
+      .today{
+        background-color: burlywood;
+        border-radius: 5px;
+      }
+  </style>
 {% endblock %}
 {% block content %}
 <div class="container">
@@ -63,8 +128,27 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4">
-            
+          <div class="col-md-4 calendar-container" style="border-radius: 10px;">
+            <div class="calendar">
+                <div class="month">
+                  <i class="fas fa-angle-left prev"></i>
+                  <div class="date">
+                    <h1 style="font-size: 18px;"></h1>
+                    <p style="font-size: 12px;"></p>
+                  </div>
+                  <i class="fas fa-angle-right next"></i>
+                </div>
+                <div class="weekdays">
+                  <div>Sun</div>
+                  <div>Mon</div>
+                  <div>Tue</div>
+                  <div>Wed</div>
+                  <div>Thu</div>
+                  <div>Fri</div>
+                  <div>Sat</div>
+                </div>
+                <div class="days"></div>
+            </div>
           </div>
     </div>
 </div>
@@ -194,6 +278,7 @@
   </div>
 </div>
 <!-- end modal -->
+<script src="{% static 'js/doctors_dashboard_appointment.js' %}"></script>
     <script src="https://code.jquery.com/jquery-2.2.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.11.3/themes/smoothness/jquery-ui.css">
