--- a/doctors/templates/doctors/doctors_base_layout/layout.html
+++ b/doctors/templates/doctors/doctors_base_layout/layout.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>{{title}}</title>
+    <title>{% block title %} {% endblock %}</title>
 
     <!-- Custom fonts for this template-->
     <link href="{% static 'vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
