--- a/doctors/templates/doctors/pages/checkup_pet.html
+++ b/doctors/templates/doctors/pages/checkup_pet.html
@@ -1,6 +1,6 @@
 {% extends 'doctors/doctors_base_layout/layout.html' %}
 {% block title %}
-
+    Pet Checkup
 {% endblock %}
 {% block style %}
 
@@ -42,6 +42,7 @@
     </div><br>
     <p>Please fill up this fields</p>
     <form class="row border border-1 card-body" action="">
+        <input type="hidden" value = "{{pet.id}}">
         <div class="row col-md-12">
             <label for="inputPassword" class="col-md-4 col-sm-5 col-form-label">What is your pet coming in for today: </label>
             <div class="col-sm-8 col-md-8">
@@ -54,7 +55,282 @@
                 <input type="text" name="what_is_your_pet_coming_in_for_today" class="form-control" id="what_is_your_pet_coming_in_for_today">
             </div>
         </div>
+        <div class="row col-md-12" style="margin-top: 10px;">
+            <label for="inputPassword" class="col-md-4 col-sm-5 col-form-label">Has your pet has any: </label>
+            <div class="col-sm-8 col-md-8" style="margin-top: 10px;">
+                <div class="row">
+                    <div class="col">
+                        <input class="form-check-input has_your_pet_had_any" value = "Vomiting" type="radio" name="has_your_pet_had_any">
+                        <label class="form-check-label" style = "margin-right: 30px;" for="has_your_pet_had_any">
+                            Vomiting
+                        </label>
+                    </div>
+                    <div class="col">
+                        <input class="form-check-input has_your_pet_had_any" value = "Diarrhea" type="radio" name="has_your_pet_had_any">
+                        <label class="form-check-label" style = "margin-right: 30px;" for="has_your_pet_had_any">
+                            Diarrhea
+                        </label>
+                    </div>
+                    <div class="col">
+                        <input class="form-check-input has_your_pet_had_any" value = "Coughing" type="radio" name="has_your_pet_had_any">
+                        <label class="form-check-label" style = "margin-right: 30px;" for="has_your_pet_had_any">
+                            Coughing
+                        </label>
+                    </div>
+                    <div class="col">
+                        <input class="form-check-input has_your_pet_had_any" value = "Sneezing" type="radio" name="has_your_pet_had_any">
+                        <label class="form-check-label" style = "margin-right: 30px;" for="has_your_pet_had_any">
+                            Sneezing
+                        </label>
+                    </div>
+                </div>  
+            </div>
+        </div>
+
+        <div class="row col-md-12" style="margin-top: 10px;">
+            <label class="col-md-4 col-sm-5 col-form-label">Pets Appetite: </label>
+            <div class="col-sm-8 col-md-8" style="margin-top: 10px;">
+                <div class="row">
+                    <div class="col">
+                        <input class="form-check-input pets_appetite" value = "Normal" type="radio" name="pets_appetite">
+                        <label class="form-check-label" style = "margin-right: 30px;" for="pets_appetite">
+                            Normal
+                        </label>
+                    </div>
+                    <div class="col">
+                        <input class="form-check-input pets_appetite" value = "Encreased" type="radio" name="pets_appetite">
+                        <label class="form-check-label" style = "margin-right: 30px;" for="pets_appetite">
+                            Encreased
+                        </label>
+                    </div>
+                    <div class="col">
+                        <input class="form-check-input pets_appetite" value = "Decreased" type="radio" name="pets_appetite">
+                        <label class="form-check-label" style = "margin-right: 30px;" for="pets_appetite">
+                            Decreased
+                        </label>
+                    </div>
+                    <div class="col">
+                        <input class="form-check-input pets_appetite" value = "None" type="radio" name="pets_appetite">
+                        <label class="form-check-label" style = "margin-right: 30px;" for="pets_appetite">
+                            None
+                        </label>
+                    </div>
+                </div>   
+            </div>
+        </div>
+
+        <div class="row col-md-12" style="margin-top: 10px;">
+            <label class="col-md-4 col-sm-5 col-form-label">Drinking: </label>
+            <div class="col-sm-8 col-md-8" style="margin-top: 10px;">
+                <div class="row">
+                    <div class="col">
+                        <input class="form-check-input drinking" value = "Normal" type="radio" name="drinking">
+                        <label class="form-check-label" style = "margin-right: 30px;" for="drinking">
+                            Normal
+                        </label>
+                    </div>
+                    <div class="col">
+                        <input class="form-check-input drinking" value = "Encreased" type="radio" name="drinking">
+                        <label class="form-check-label" style = "margin-right: 30px;" for="drinking">
+                            Encreased
+                        </label>
+                    </div>
+                    <div class="col">
+                        <input class="form-check-input drinking" value = "Decreased" type="radio" name="drinking">
+                        <label class="form-check-label" style = "margin-right: 30px;" for="drinking">
+                            Decreased
+                        </label>
+                    </div>
+                    <div class="col">
+                        <input class="form-check-input drinking" value = "None" type="radio" name="drinking">
+                        <label class="form-check-label" style = "margin-right: 30px;" for="drinking">
+                            None
+                        </label>
+                    </div>
+                </div>   
+            </div>
+        </div>
+
+        <div class="row col-md-12" style="margin-top: 10px;">
+            <label class="col-md-4 col-sm-5 col-form-label">Urination: </label>
+            <div class="col-sm-8 col-md-8" style="margin-top: 10px;">
+                <div class="row">
+                    <div class="col">
+                        <input class="form-check-input urination" value = "Normal" type="radio" name="urination">
+                        <label class="form-check-label" style = "margin-right: 30px;" for="urination">
+                            Normal
+                        </label>
+                    </div>
+                    <div class="col">
+                        <input class="form-check-input urination" value = "Encreased" type="radio" name="urination">
+                        <label class="form-check-label" style = "margin-right: 30px;" for="urination">
+                            Encreased
+                        </label>
+                    </div>
+                    <div class="col">
+                        <input class="form-check-input urination" value = "Decreased" type="radio" name="urination">
+                        <label class="form-check-label" style = "margin-right: 30px;" for="urination">
+                            Decreased
+                        </label>
+                    </div>
+                    <div class="col">
+                        <input class="form-check-input urination" value = "Straining" type="radio" name="urination">
+                        <label class="form-check-label" style = "margin-right: 30px;" for="urination">
+                            Straining
+                        </label>
+                    </div>
+                </div>   
+            </div>
+        </div>
+        
+        <div class="row col-md-12" style="margin-top: 10px;">
+            <label class="col-md-4 col-sm-5 col-form-label">Activity Level: </label>
+            <div class="col-sm-8 col-md-8" style="margin-top: 10px;">
+                <div class="row">
+                    <div class="col">
+                        <input class="form-check-input activity_level" value = "Normal" type="radio" name="activity_level">
+                        <label class="form-check-label" style = "margin-right: 30px;" for="activity_level">
+                            Normal
+                        </label>
+                    </div>
+                    <div class="col">
+                        <input class="form-check-input activity_level" value = "Encreased" type="radio" name="activity_level">
+                        <label class="form-check-label" style = "margin-right: 30px;" for="activity_level">
+                            Encreased
+                        </label>
+                    </div>
+                    <div class="col">
+                        <input class="form-check-input activity_level" value = "Decreased" type="radio" name="activity_level">
+                        <label class="form-check-label" style = "margin-right: 30px;" for="activity_level">
+                            Decreased
+                        </label>
+                    </div>
+                    <div class="col">
+                       
+                    </div>
+                </div>   
+            </div>
+        </div>
+
+        <div class="row col-md-12" style="margin-top: 10px;">
+            <label class="col-md-4 col-sm-5 col-form-label">Vaccination: </label>
+            <div class="col-sm-8 col-md-8" style="margin-top: 10px;">
+                <div class="row">
+                    <div class="col">
+                        <input class="form-check-input vaccination" value = "Rabies" type="radio" name="vaccination">
+                        <label class="form-check-label" style = "margin-right: 30px;" for="vaccination">
+                            Rabies
+                        </label>
+                    </div>
+                    <div class="col">
+                        <input class="form-check-input vaccination" value = "C6" type="radio" name="vaccination">
+                        <label class="form-check-label" style = "margin-right: 30px;" for="vaccination">
+                            C6
+                        </label>
+                    </div>
+                    <div class="col">
+                        <input class="form-check-input vaccination" value = "C6/CV" type="radio" name="vaccination">
+                        <label class="form-check-label" style = "margin-right: 30px;" for="vaccination">
+                            C6/CV
+                        </label>
+                    </div>
+                    <div class="col">
+                        <input class="form-check-input vaccination" value = "Pneumondog" type="radio" name="vaccination">
+                        <label class="form-check-label" style = "margin-right: 30px;" for="vaccination">
+                            Pneumondog
+                        </label>
+                    </div>
+                </div>   
+            </div>
+        </div>
+
+        <div class="row col-md-12" style="margin-top: 10px;">
+            <label class="col-md-4 col-sm-5 col-form-label">Deworming: </label>
+            <div class="col-sm-8 col-md-8" style="margin-top: 10px;">
+                <div class="row">
+                    <div class="col">
+                        <input class="form-check-input deworming" value = "GI worms" type="radio" name="deworming">
+                        <label class="form-check-label" style = "margin-right: 30px;" for="deworming">
+                            GI worms
+                        </label>
+                    </div>
+                    <div class="col">
+                        <input class="form-check-input deworming" value = "Heartworm Prevention" type="radio" name="deworming">
+                        <label class="form-check-label" style = "margin-right: 30px;" for="deworming">
+                            Heartworm Prevention
+                        </label>
+                    </div>
+                    <div class="col">
+                        
+                    </div>
+                    <div class="col">
+                        
+                    </div>
+                </div>   
+            </div>
+        </div>
+
+        <div class="row col-md-12" style="margin-top: 10px;">
+            <label for="inputPassword" class="col-md-4 col-sm-5 col-form-label">Tick and Flea Tx: </label>
+            <div class="col-sm-8 col-md-8">
+                <input type="text" name="tick_and_flea_tx" class="form-control" id="tick_and_flea_tx">
+            </div>
+        </div>
+        <div class="row col-md-12" style="margin-top: 10px;">
+            <label for="inputPassword" class="col-md-4 col-sm-5 col-form-label">Endectocide: </label>
+            <div class="col-sm-8 col-md-8">
+                <input type="text" name="endoctocide" class="form-control" id="endoctocide">
+            </div>
+        </div>
+        <div class="row col-md-12" style="margin-top: 10px;">
+            <label for="inputPassword" class="col-md-4 col-sm-5 col-form-label">What does your pet last eat? </label>
+            <div class="col-sm-8 col-md-8">
+                <input type="text" name="what_does_your_pet_eat" class="form-control" id="what_does_your_pet_eat">
+            </div>
+        </div>
+        <div class="row col-md-12" style="margin-top: 10px;">
+            <label for="inputPassword" class="col-md-4 col-sm-5 col-form-label">When did your pet last eat? </label>
+            <div class="col-sm-8 col-md-8">
+                <input type="text" name="when_did_your_pet_last_eat" class="form-control" id="when_did_your_pet_last_eat">
+            </div>
+        </div>
+        <div class="row col-md-12" style="margin-top: 10px;">
+            <label class="col-md-4 col-sm-5 col-form-label">Is your pet taking any medication? </label>
+            <div class="col-sm-8 col-md-8" style="margin-top: 10px;">
+                <div class="row">
+                    <div class="col">
+                        <input class="form-check-input is_your_pet_taking_any_medications" value = "Yes" type="radio" name="is_your_pet_taking_any_medications">
+                        <label class="form-check-label" style = "margin-right: 30px;" for="is_your_pet_taking_any_medications">
+                            Yes
+                        </label>
+                    </div>
+                    <div class="col">
+                        <input class="form-check-input is_your_pet_taking_any_medications" value = "No" type="radio" name="is_your_pet_taking_any_medications">
+                        <label class="form-check-label" style = "margin-right: 30px;" for="is_your_pet_taking_any_medications">
+                            No
+                        </label>
+                    </div>
+                    <div class="col">
+                       
+                    </div>
+                    <div class="col">
+                       
+                    </div>
+                </div>   
+            </div>
+        </div>
+        <div class="row col-md-12" style="margin-top: 10px;">
+            <label for="inputPassword" class="col-md-4 col-sm-5 col-form-label">If so, please list medication and doses? </label>
+            <div class="col-sm-8 col-md-8">
+                <input type="text" name="if_so_please_list_medication_and_doses" class="form-control" id="if_so_please_list_medication_and_doses">
+            </div>
+        </div>
+        <div class="row col-md-12" style="margin-top: 20px;">
+            <input type="submit" name="submit" class="btn form-control bg-success" value = "Submit" id="submit">
+        </div>
     </form>
 </div>
-    
+    <script>
+        
+    </script>
 {% endblock %}
