--- a/doctors/templates/doctors/pages/pets_list.html
+++ b/doctors/templates/doctors/pages/pets_list.html
@@ -81,8 +81,8 @@
                               <a class="dropdown-item" href="{% url 'doctors:update_pet' pet.id %}"><i class="far fa-edit"></i>  Update</a>
                              
                               <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="{% url 'doctors:checkup_view' %}?pet_id={{pet.id}}"><i class="fas fa-diagnoses"></i> Check up this pet</a>
-                              <a class="dropdown-item" href="#"><i class="fa fa-history" aria-hidden="true"></i> Check up history</a>
+                              <a class="dropdown-item" href="{% url 'doctors:checkup_view' %}?pet_id={{pet.id}}"><i class="fas fa-diagnoses"></i> Checkup this pet</a>
+                              <a class="dropdown-item" href="#"><i class="fa fa-history" aria-hidden="true"></i> Checkup and Result history</a>
                               <div class="dropdown-divider"></div>
                               <a class="dropdown-item" href="#"><i class="fas fa-prescription"></i> Prescriptions</a>
                             </div>
